--- a/extras/lib_contentmap/language/de-DE/de-DE.contentmap.ini
+++ b/extras/lib_contentmap/language/de-DE/de-DE.contentmap.ini
@@ -1,12 +1,12 @@
 ;Module frontend strings
-CONTENTMAP_JAVASCRIPT_REQUIRED="ContentMap benötigt Javascript."
-CONTENTMAP_NO_DATA="Es gibt in diesem Modul keinen Artikel mit den angegebenen Koordinaten. Überprüfen Sie Ihre Einstellungen für das Modul."
-CONTENTMAP_GET_DIRECTIONS="Berechnen Sie den Abstand"
-CONTENTMAP_PLEASE_SAVE="Speichern, um das Symbol anzuzeigen aktualisiert"
-CONTENTMAP_MARKERS_PREVIEW="Vorschau icon marker"
-CONTENTMAP_FROM_ADDRESS="From address"
+CONTENTMAP_JAVASCRIPT_REQUIRED="ContentMap bentigt Javascript Unterst&uuml;tzung."
+CONTENTMAP_NO_DATA="Es gibt in diesem Modul keinen Artikel mit den angegebenen Koordinaten. &Uuml;berpr&uuml;fe die Geo Daten der Artikel und die Filter Einstellungen des Moduls."
+CONTENTMAP_GET_DIRECTIONS="Berechne Abstand"
+CONTENTMAP_PLEASE_SAVE="Bitte speichern, um das ausgew&auml;hlte Symbol anzuzeigen. <a href='http://www.opensourcesolutions.es/en/marker-icons.html' target='_blank'>Zur Vorschau aller Standard Marker Icons.</a>"
+CONTENTMAP_MARKERS_PREVIEW="Vorschau Marker Icons"
+CONTENTMAP_FROM_ADDRESS="Von Adresse"
 
-CONTENTMAP_TAGS_NO_DATA="No tags have been displayed by this module. Add some tags with city o region names."
+CONTENTMAP_TAGS_NO_DATA="In diesem Modul werden keine Tags angezeigt. F&uuml;ge Tags mit Ortsnamen oder Regionen hinzu."
 CONTENTMAP_GEOCHART_ELEMENTS="#"
 
-CONTENTMAP_DESELECT_ALL="Uncheck All"
+CONTENTMAP_DESELECT_ALL="Auswahl aufheben"
