--- a/extras/mod_contentmap/language/de-DE/de-DE.mod_contentmap.sys.ini
+++ b/extras/mod_contentmap/language/de-DE/de-DE.mod_contentmap.sys.ini
@@ -1,3 +1,3 @@
 MOD_CONTENTMAP="ContentMap"
-MOD_CONTENTMAP_DESCRIPTION="Zeigt den Ort des Artikels auf einer Google Map."
+MOD_CONTENTMAP_DESCRIPTION="Zeigt ausgew&auml;hlte Orte des Artikels auf Google Map."
 
