--- a/extras/plg_contentmap/language/de-DE/de-DE.plg_content_contentmap.sys.ini
+++ b/extras/plg_contentmap/language/de-DE/de-DE.plg_content_contentmap.sys.ini
@@ -1,4 +1,4 @@
 ;Extensions -> Extension Manager -> Manage
 PLG_CONTENT_CONTENTMAP="ContentMap"
-PLG_CONTENTMAP_DESCRIPTION="Zeigt den Ort innerhalb des Artikels auf einer Google Map."
+PLG_CONTENTMAP_DESCRIPTION="Zeigt den ausgew&uuml;hlten Ort innerhalb des Artikels auf Google Map."
 
