aggiornati i file di lingua

--- a/extras/lib_contentmap/language/cs-CZ/cs-CZ.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/cs-CZ/cs-CZ.contentmap.admin.ini
@@ -83,7 +83,7 @@ CONTENTMAP_UNFEATURED_ARTICLES="Nevystavené články"
 CONTENTMAP_ALT_CSS_LBL="Alternativní vzhled"
 CONTENTMAP_ALT_CSS_DSC="Použíj jiný vzhled z dodaného modulu nebo vyber vlastní css. Nahrej vlastní css do /libraries/contentmap/css/"
 CONTENTMAP_API_KEY_LBL="API key"
-CONTENTMAP_API_KEY_DSC="Google Maps API v.3 nevyžaduje API key, ale pokud máš 'Google Maps API for Business license', vlož ho sem."
+CONTENTMAP_API_KEY_DSC="GGoogle Maps API v.3 require an API key, find your free API KEY: https://developers.google.com/maps/documentation/javascript/get-api-key"
 
 CONTENTMAP_DATASOURCE_WARNING="Jiný zdroj dat může vyžadovat dodatečnou konfiguraci. Hledej vztahující se odstavec manuálu."
 CONTENTMAP_DATASOURCE_LBL="Zdroj dat"
