--- a/extras/lib_contentmap/language/da-DK/da-DK.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/da-DK/da-DK.contentmap.admin.ini
@@ -83,7 +83,7 @@ CONTENTMAP_UNFEATURED_ARTICLES="Ikke udvalgte artikler"
 CONTENTMAP_ALT_CSS_LBL="Alternativt stylesheet"
 CONTENTMAP_ALT_CSS_DSC="Brug det stylesheet som følger med modulet eller overskriv det ved at vælge dit eget stylesheet. Upload din egen cssfil i /libraries/contentmap/css/"
 CONTENTMAP_API_KEY_LBL="API nøgle"
-CONTENTMAP_API_KEY_DSC="Google Maps API v.3 kræver ikke en API nøglel, men hvis du har 'Google Maps API for Business license', sæt den ind her."
+CONTENTMAP_API_KEY_DSC="Google Maps API v.3 require an API key, find your free API KEY: https://developers.google.com/maps/documentation/javascript/get-api-key"
 
 CONTENTMAP_DATASOURCE_WARNING="forskellige datakilder trænger måske til ekstra konfiguration. Se brugermanualen."
 CONTENTMAP_DATASOURCE_LBL="Datakilde"
