--- a/extras/lib_contentmap/language/de-DE/de-DE.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/de-DE/de-DE.contentmap.admin.ini
@@ -86,7 +86,7 @@ CONTENTMAP_UNFEATURED_ARTICLES="Keine Featured Artikel"
 CONTENTMAP_ALT_CSS_LBL="Alternatives Stylesheet"
 CONTENTMAP_ALT_CSS_DSC="Verwende ein anderes Stylesheet vom unterst&uuml;tzten Modul oder &uuml;berschreibe es mit eigenem CSS. Lade eigenes CSS in /libraries/contentmap/css/"
 CONTENTMAP_API_KEY_LBL="API Schl&uuml;ssel"
-CONTENTMAP_API_KEY_DSC="Google Maps API v.3 ben&ouml;tigt keinen API-Schl&uuml;ssel, aber wenn ein Google Maps API Schl&uuml;ssel mit einer Business Lizenz vorhanden ist, kann er hier eingetragen werden."
+CONTENTMAP_API_KEY_DSC="Google Maps API v.3 require an API key, find your free API KEY: https://developers.google.com/maps/documentation/javascript/get-api-key"
 
 CONTENTMAP_DATASOURCE_WARNING="Unterschiedliche Datenquellen k&ouml;nnen zus&auml;tzliche Konfiguration erforderlich machen. Siehe hierzu den entsprechendenn Eintrag in der Dokumentation.)"
 CONTENTMAP_DATASOURCE_LBL="Datenquelle"
