--- a/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/en-GB/en-GB.contentmap.admin.ini
@@ -86,7 +86,7 @@ CONTENTMAP_UNFEATURED_ARTICLES="Unfeatured articles"
 CONTENTMAP_ALT_CSS_LBL="Alternative stylesheet"
 CONTENTMAP_ALT_CSS_DSC="Use a different stylesheet from the supplied module or override it choosing your own css. Upload your own css in /libraries/contentmap/css/"
 CONTENTMAP_API_KEY_LBL="API key"
-CONTENTMAP_API_KEY_DSC="Google Maps API v.3 does not require an API key, but if you have a 'Google Maps API for Business license', insert it here."
+CONTENTMAP_API_KEY_DSC="Google Maps API v.3 require an API key, find your free API KEY: https://developers.google.com/maps/documentation/javascript/get-api-key"
 
 CONTENTMAP_DATASOURCE_WARNING="Different data source may need additional configuration. See related manual page."
 CONTENTMAP_DATASOURCE_LBL="Data source"
