--- a/extras/lib_contentmap/language/es-ES/es-ES.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/es-ES/es-ES.contentmap.admin.ini
@@ -83,7 +83,7 @@ CONTENTMAP_UNFEATURED_ARTICLES="Artículos no destacados"
 CONTENTMAP_ALT_CSS_LBL="Presentación alternativa"
 CONTENTMAP_ALT_CSS_DSC="Usa un estilo de presentation diferente desde el módulo proporcionado o selection tu propio css. Sube tu propio css en /libraries/contentmap/css/"
 CONTENTMAP_API_KEY_LBL="API key"
-CONTENTMAP_API_KEY_DSC="Google Maps API v.3 no requiere API key, pero si tienes licencia comercial para negocios, introdúcela aquí."
+CONTENTMAP_API_KEY_DSC="Google Maps API v.3 require an API key, find your free API KEY: https://developers.google.com/maps/documentation/javascript/get-api-key"
 
 CONTENTMAP_DATASOURCE_WARNING="Los datos de diferentes fuentes necesitan configuración adicional. Consultar el manual."
 CONTENTMAP_DATASOURCE_LBL="Fuentes de datos"
