--- a/extras/lib_contentmap/language/fr-FR/fr-FR.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/fr-FR/fr-FR.contentmap.admin.ini
@@ -83,7 +83,7 @@ CONTENTMAP_UNFEATURED_ARTICLES="Articles non 'vedettes'"
 CONTENTMAP_ALT_CSS_LBL="Feuilles de style alternatives"
 CONTENTMAP_ALT_CSS_DSC="Utilisez une feuille de style différente que celle proposée avec le module ou 'overridez' la avec votre css personnalisé. Uploadez votre css personnalisé dans le dossier /libraries/contentmap/css/"
 CONTENTMAP_API_KEY_LBL="API key"
-CONTENTMAP_API_KEY_DSC="Google Maps API v.3 ne nécessite plus de API key, mais si vous possédez une licence professionnelle 'Google Maps API for Business licence', copiez-collez là ici."
+CONTENTMAP_API_KEY_DSC="Google Maps API v.3 require an API key, find your free API KEY: https://developers.google.com/maps/documentation/javascript/get-api-key"
 
 CONTENTMAP_DATASOURCE_WARNING="Différentes sources de données peuvent avoir besoin d'une configuration supplémentaire. Voir l'aide en rapport."
 CONTENTMAP_DATASOURCE_LBL="Source de données"
