--- a/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/it-IT/it-IT.contentmap.admin.ini
@@ -111,7 +111,7 @@ CONTENTMAP_SHOW_DESELECT_ALL_DSC="Permette di indicare se mostrare o meno il tas
 CONTENTMAP_ALT_CSS_LBL="Foglio di stile alternativo"
 CONTENTMAP_ALT_CSS_DSC="Utilizza un differente foglio di stile fornito dal modulo o creato da te. Carica i tuoi css in /libraries/contentmap/css/"
 CONTENTMAP_API_KEY_LBL="Chiave API"
-CONTENTMAP_API_KEY_DSC="Le API di Google Maps v.3 non necessitano di una chiave, ma se detieni una 'Licenza Business di Google Maps API', inseriscila qui."
+CONTENTMAP_API_KEY_DSC="Le API di Google Maps v.3 necessitano di una chiave, ottieni la tua API KEY gratuita: https://developers.google.com/maps/documentation/javascript/get-api-key"
 
 CONTENTMAP_DATASOURCE_WARNING="Sorgenti dati differenti possono avere bisogno di configurazioni addizionali. Vedi la relativa pagina di manuale."
 CONTENTMAP_DATASOURCE_LBL="Sorgente dati"
