--- a/extras/lib_contentmap/language/nb-NO/nb-NO.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/nb-NO/nb-NO.contentmap.admin.ini
@@ -83,7 +83,7 @@ CONTENTMAP_UNFEATURED_ARTICLES="Ikke utvalgte artikler"
 CONTENTMAP_ALT_CSS_LBL="Alternativt stylesheet"
 CONTENTMAP_ALT_CSS_DSC="Bruk et annet stylesheet enn den som følger modulen eller overstyr det ved å velge dtii eget stylesheet. Last opp din egen cssfil i /libraries/contentmap/css/"
 CONTENTMAP_API_KEY_LBL="API nøkkel"
-CONTENTMAP_API_KEY_DSC="Google Maps API v.3 krever ikke en API nøkkel,men hvis du har 'Google Maps API for Business license', sett den inn her."
+CONTENTMAP_API_KEY_DSC="Google Maps API v.3 require an API key, find your free API KEY: https://developers.google.com/maps/documentation/javascript/get-api-key"
 
 CONTENTMAP_DATASOURCE_WARNING="forskjellige datakilder trenger kanskje tilleggskonfigurering. Se brukermanualen."
 CONTENTMAP_DATASOURCE_LBL="Datakilde"
