--- a/extras/lib_contentmap/language/nl-NL/nl-NL.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/nl-NL/nl-NL.contentmap.admin.ini
@@ -83,7 +83,7 @@ CONTENTMAP_UNFEATURED_ARTICLES = "Niet speciale artikelen"
 CONTENTMAP_ALT_CSS_LBL = "Alternatieve stylesheet"
 CONTENTMAP_ALT_CSS_DSC = "Gebruik een andere stylesheet van de bijgeleverde module of overschrijven kiezen van uw eigen css. Upload je eigen css in / libraries / contentmap / css /"
 CONTENTMAP_API_KEY_LBL = "API-sleutel"
-CONTENTMAP_API_KEY_DSC = "Google Maps API v.3 vereist geen een API-sleutel, maar als je een 'Google Maps API for Business licentie', hier in te vullen."
+CONTENTMAP_API_KEY_DSC = "Google Maps API v.3 require an API key, find your free API KEY: https://developers.google.com/maps/documentation/javascript/get-api-key"
 
 CONTENTMAP_DATASOURCE_WARNING = "Verschillende gegevensbron kan nodig zijn extra configuratie. Zie gerelateerde manual pagina."
 CONTENTMAP_DATASOURCE_LBL = "Gegevensbron"
