--- a/extras/lib_contentmap/language/pt-BR/pt-BR.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/pt-BR/pt-BR.contentmap.admin.ini
@@ -83,7 +83,7 @@ CONTENTMAP_UNFEATURED_ARTICLES="Artigos não destacados"
 CONTENTMAP_ALT_CSS_LBL="Folha de estilo alternativa"
 CONTENTMAP_ALT_CSS_DSC="Use uma folha de estilo diferente da fornecida com o módulo ou substitua escolhendo o seu próprio CSS. Envie o seu próprio CSS para /libraries/contentmap/css/"
 CONTENTMAP_API_KEY_LBL="Chave API"
-CONTENTMAP_API_KEY_DSC="Google Maps API v.3 não necessita de uma chave API, mas se utiliza 'Google Maps API for Business license', insira a mesma aqui."
+CONTENTMAP_API_KEY_DSC="Google Maps API v.3 require an API key, find your free API KEY: https://developers.google.com/maps/documentation/javascript/get-api-key"
 
 CONTENTMAP_DATASOURCE_WARNING="Fontes de dados diferentes podem necessitar de configuração adicional. Veja o manual respetivo."
 CONTENTMAP_DATASOURCE_LBL="Fonte dados"
