--- a/extras/lib_contentmap/language/sv-SE/sv-SE.contentmap.admin.ini
+++ b/extras/lib_contentmap/language/sv-SE/sv-SE.contentmap.admin.ini
@@ -83,7 +83,7 @@ CONTENTMAP_UNFEATURED_ARTICLES="Outvalda artiklar"
 CONTENTMAP_ALT_CSS_LBL="Alternativa stylesheet"
 CONTENTMAP_ALT_CSS_DSC="Använd olika stylesheet från modulen eller override den med egen css. Ladda upp egen css i /libraries/contentmap/css/"
 CONTENTMAP_API_KEY_LBL="API key"
-CONTENTMAP_API_KEY_DSC="Google Maps API v.3 kräver inte en API key, men om du har en från din 'Google Maps API for Business license', infoga den här."
+CONTENTMAP_API_KEY_DSC="Google Maps API v.3 require an API key, find your free API KEY: https://developers.google.com/maps/documentation/javascript/get-api-key"
 
 CONTENTMAP_DATASOURCE_WARNING="Different data source may need additional configuration. See related manual page." ;*** Recently added. Still untranslated. ***
 CONTENTMAP_DATASOURCE_LBL="Data source" ;*** Recently added. Still untranslated. ***
